llm-infra/terragrunt/dev/application-setup/.terragrunt-cache/8Gko9iKL2F69Z5PtsgBXgcj0aYs/L8eSicptm-tC6J4SggLJKJYIYoA/modules/asg/acg.tf
resource "aws_security_group" "asg" {
  name        = "${var.env}-asg-sg"
  description = "Security group for ASG instances"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH from bastion"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"

    security_groups = [var.bastion_security_group_id]
  }

   ingress {
    from_port       = 11434
    to_port         = 11434
    protocol        = "tcp"
    security_groups = [var.alb_security_group_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.common_tags, {
    Name = "${var.env}-asg-sg"
  })
}

resource "aws_launch_template" "this" {
  name_prefix   = "${var.env}-asg-"
  image_id      = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name

 block_device_mappings {
  device_name = "/dev/xvda"

  ebs {
    volume_size = 20
    volume_type = "gp3"
    delete_on_termination = true
  }
}


  vpc_security_group_ids = [aws_security_group.asg.id]

  tag_specifications {
    resource_type = "instance"

    tags = merge(var.common_tags, {
      Name = "${var.env}-asg-instance"
    })
  }
}

resource "aws_autoscaling_group" "this" {
  name                = "${var.env}-asg"
  desired_capacity    = var.desired_capacity
  min_size            = var.min_size
  max_size            = var.max_size
  vpc_zone_identifier = var.private_asg_subnet_ids
  target_group_arns = var.target_group_arns

  launch_template {
    id      = aws_launch_template.this.id
    version = "$Latest"
  }

  health_check_type = "ELB"

  tag {
    key                 = "Name"
    value               = "${var.env}-asg-instance"
    propagate_at_launch = true
  }
}

resource "aws_autoscaling_policy" "cpu_target" {
  name                   = "${var.env}-cpu-scaling"
  autoscaling_group_name = aws_autoscaling_group.this.name
  policy_type            = "TargetTrackingScaling"

  target_tracking_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ASGAverageCPUUtilization"
    }

    target_value = 50.0
  }
}
